--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -15,12 +15,27 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
 }
 
 .guInteractive {
+    #interactiveByline{
+        margin-top:20px;
+        .content__meta-container{
+            display: block;
+        }
+        *{
+            box-sizing:content-box;
+        }
+        .meta__numbers{
+            display:none;
+        }
+        .meta__social{
+            margin-right:0;
+        }
+    }
 	font-family:'Guardian Egyptian Web';
 	color:#333;
 	-webkit-font-smoothing:antialiased;
 	max-width:1300px;
 	margin:0 auto;
-	padding:0 10px;
+	padding:0 ;
 	box-sizing:border-box;
 
 	*{
@@ -32,9 +47,12 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
 		line-height:1.2em;
 	}
 
-	h1{
-		font-weight:100;
+	h1{   
+        font-weight:bold;
 		line-height:1em;
+        margin-bottom:0;
+        display:inline;
+        font-size:32px;
 	}
 
 	a{
@@ -44,20 +62,28 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
 
 	#header{
 		padding:0;
-		max-width:500px;
-		margin:20px auto 20px;
+		max-width:520px;
+		margin:40px auto 20px;
 
-		p{
-			font-size:16px;
-			line-height:1.2em;
-			color:#767676;
-			padding-bottom:40px;
+		#interactiveStandfirst{
+			font-size:32px;
+			line-height:1em;
+            margin-top:10px;
+			color:#BDBDBD;
+			padding-bottom:0;
 			margin-bottom:0;
+            display:inline;
+            font-weight:bold;
 		}
+        &:after{
+            clear:both;
+            display:block;
+            content:'';
+        }
 	}
 
 	#content{
-		border-top: 1px solid #dcdcdc;
+		// border-top: 1px solid #dcdcdc;
 		margin:0;
 		padding-top:20px;
 	}
@@ -101,7 +127,7 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
     		width:100%;
     		height:auto;
     		bottom:0;
-    		background:rgba(255,255,255,0.75);
+    		background:rgba(242,242,242,0.75);
     		padding:20px 10px;
 
     		h3{
@@ -117,8 +143,12 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
     		}
     	}
     	&.selected-true{
-			opacity:0.2;
 			cursor: default;
+            border:1px solid #4BC6DF;
+
+            .dog{
+                opacity:0.8;
+            }
 			.dog:hover{
 				background-size:100%;
 			}
@@ -127,31 +157,29 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
     }
 
     #detailContainer{
-    	padding:20px 0 20px;
+    	padding:0 0 20px;
     	margin-bottom:20px;
     	border-bottom:1px solid #dcdcdc;
+        border-top:1px solid #dcdcdc;
     	h3{
     		margin:0;
-    		text-align: center;
     		font-weight:100;
-    		font-size:28px;
+    		font-size:24px;
     	}
     	#titleStroke{
     		height:1px;
     		width:60px;
     		background-color:#dcdcdc;
-    		margin:5px auto 10px;
+    		margin:5px 0 10px;
     	}
     	#dogDescription{
     		font-family:'Guardian Text Sans Web';
-    		color:#767676;
-    		text-align: center;
+    		color:#333;
     		font-size:14px;
     		margin:0 0 20px;
     	}
     	#shareContainer{
-    		text-align: center;
-    		margin:0 auto 40px;
+    		margin:20px auto 40px;
     		button{
     			height:34px;
     			width:34px;
@@ -191,7 +219,7 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
     	max-width:620px;
     	margin:0 auto;
     	p{
-    		line-height:1.2em;
+    		line-height:1.5em;
     	}
     }
     @media(min-width:480px){
@@ -208,6 +236,12 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
     	.dogRow{
     		clear:both;
     	}
+        #header{
+            margin:80px auto 0;
+            #interactiveStandfirst{
+                font-size:48px;
+            }
+        }
     	h1{
     		font-size:48px;
     		margin-bottom:0;
@@ -215,25 +249,30 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
     	#detailContainer{
     		padding:40px 0;
     		h3{
-    			font-size:42px;
+    			font-size:36px;
     		}
     		#titleStroke{
     			margin: 10px auto 20px;
     		}
     	}
+        .detailWrapper{
+            max-width:520px;
+            margin: 0 auto;
+        }
     }
     @media(min-width:740px){
     	padding:1px 20px;
-
+        .detailWrapper{
+            // margin-left:200px;
+        }
     	#header{
+            margin:40px auto 0;
     		padding-top:40px;
-    		padding-bottom:40px;
-    		p{
-    			font-size:18px;
-    		}
+    		padding-bottom:20px;
+            // margin-left:200px;
     	}
     	h1{
-    		font-size:68px;
+    		// font-size:68px;
     		margin-bottom:0;
     	}
     	h3{
@@ -256,7 +295,7 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
     			margin: 10px auto 25px;
     		}
     		h3{
-    			font-size:62px;
+    			// font-size:62px;
     		}
     	}
     }
@@ -274,6 +313,7 @@ $guss-webfonts-base-url: '//pasteup.guim.co.uk/fonts/';
     	}
     	#detailContainer{
     		padding:40px 0 80px;
+            margin-bottom:40px;
     	}
     	
 
