--- a/src/js/templates/appTemplate.html
+++ b/src/js/templates/appTemplate.html
@@ -22,7 +22,6 @@
                     </div>
                 </div>
                 <img src="@@assetPath@@/imgs/{{id}}/{{imagebig}}" alt="picture of {{name}}" />
-                <!-- <div>{{{  loadImage("@@assetPath@@/imgs/" + id + "/" + imagebig,name)  }}}</div> -->
                 <div class="detailWrapper">
                     <div id="dogStory">
                     {{#story:i}}
@@ -57,7 +56,7 @@
             {{/allDogs}}
         </div>
         <div id="moreStories">
-            <h2 id="moreStoriesTitle">More on this story</h2>
+            <h2 id="moreStoriesTitle">More on heroic dogs</h2>
             <li class="otherArticle">
                 <div class="otherarticleimage"><img src="@@assetPath@@/imgs/article1.jpg" /></div>
                 <div class="otherarticletitle"><span>Puppy love: 'Do I like dogs more than people?'</span></div>
